# openapi-core

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  index.rst  mkdocs.yml  pyproject.toml  requirements.txt  requirements_2.7.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 00_bug_report.yml  01_enhancement.yml  config.yml
.github/workflows/: build-docs.yml  contrib-tests.yml  python-publish.yml  python-test.yml  python-tests.yml
docs/: api.rst  conf.py  configuration.md  contributing.md  contributing.rst  customizations.rst  extensions.md  extensions.rst  index.md  index.rst  installation.rst  integrations.rst  security.md  security.rst  unmarshalling.md  unmarshalling.rst  usage.rst  validation.md  validation.rst
docs/api/: index.rst  openapi.rst
docs/customizations/: extra_format_unmarshallers.md  extra_format_unmarshallers.rst  extra_format_validators.md  extra_format_validators.rst  extra_media_type_deserializers.md  extra_media_type_deserializers.rst  index.md  index.rst  request_unmarshaller_cls.md  request_unmarshaller_cls.rst  request_validator_cls.md  request_validator_cls.rst  response_unmarshaller_cls.md  response_unmarshaller_cls.rst  response_validator_cls.md  response_validator_cls.rst  spec_validator_cls.md  spec_validator_cls.rst
docs/integrations/: aiohttp.md  aiohttp.rst  aws.rst  bottle.md  bottle.rst  django.md  django.rst  falcon.md  falcon.rst  fastapi.md  fastapi.rst  flask.md  flask.rst  index.md  index.rst  pyramid.md  pyramid.rst  requests.md  requests.rst  starlette.md  starlette.rst  tornado.md  tornado.rst  werkzeug.md  werkzeug.rst
docs/reference/: configurations.md  datatypes.md  index.md  openapi.md  protocols.md  types.md
openapi_core/: __init__.py  _python27_patch.py  app.py  components.py  configurations.py  datatypes.py  enums.py  exceptions.py  finders.py  infos.py  media_types.py  models.py  operations.py  parameters.py  paths.py  protocols.py  request_bodies.py  responses.py  schemas.py  servers.py  shortcuts.py  specs.py  types.py  typing.py  util.py  validators.py  wrappers.py
openapi_core/casting/schemas/: __init__.py  casters.py  datatypes.py  exceptions.py  factories.py  util.py
openapi_core/contrib/aiohttp/: __init__.py  requests.py  responses.py
openapi_core/contrib/aws/: __init__.py  datatypes.py  finders.py  requests.py  responses.py  types.py  util.py
openapi_core/contrib/django/: __init__.py  backports.py  compat.py  decorators.py  handlers.py  integrations.py  middlewares.py  providers.py  requests.py  responses.py
openapi_core/contrib/falcon/: __init__.py  handlers.py  integrations.py  middlewares.py  requests.py  responses.py  util.py
openapi_core/contrib/fastapi/: __init__.py  middlewares.py  requests.py  responses.py
openapi_core/contrib/flask/: __init__.py  decorators.py  handlers.py  integrations.py  providers.py  requests.py  responses.py  types.py  views.py
openapi_core/contrib/requests/: __init__.py  protocols.py  requests.py  responses.py
openapi_core/contrib/starlette/: __init__.py  handlers.py  integrations.py  middlewares.py  requests.py  responses.py
openapi_core/contrib/werkzeug/: __init__.py  requests.py  responses.py
openapi_core/deserializing/: exceptions.py
openapi_core/deserializing/media_types/: __init__.py  datatypes.py  deserializers.py  enums.py  exceptions.py  factories.py  util.py
openapi_core/deserializing/parameters/: __init__.py  deserializers.py  exceptions.py  factories.py  util.py
openapi_core/deserializing/styles/: __init__.py  datatypes.py  deserializers.py  exceptions.py  factories.py  util.py
openapi_core/extensions/: __init__.py
openapi_core/extensions/models/: __init__.py  factories.py  models.py  types.py
openapi_core/schema/: encodings.py  exceptions.py  models.py  parameters.py  protocols.py  schemas.py  servers.py  shortcuts.py  specs.py
openapi_core/schema/components/: factories.py  models.py
openapi_core/schema/contacts/: factories.py  models.py
openapi_core/schema/content/: exceptions.py  factories.py  models.py
openapi_core/schema/extensions/: generators.py  models.py
openapi_core/schema/external_docs/: factories.py  models.py
openapi_core/schema/infos/: factories.py  models.py
openapi_core/schema/licenses/: factories.py  models.py
openapi_core/schema/links/: generators.py  models.py
openapi_core/schema/media_types/: exceptions.py  generators.py  models.py
openapi_core/schema/operations/: exceptions.py  generators.py  models.py
openapi_core/schema/parameters/: enums.py  exceptions.py  factories.py  generators.py  (+1 more)
openapi_core/schema_validator/: __init__.py  _format.py  _validators.py  validators.py
openapi_core/security/: __init__.py  exceptions.py  factories.py  providers.py  util.py
openapi_core/spec/: __init__.py  accessors.py  paths.py  schemas.py  servers.py  shortcuts.py  specs.py
openapi_core/templating/: datatypes.py  util.py
openapi_core/testing/: __init__.py  datatypes.py  factories.py  mock.py  requests.py  responses.py
openapi_core/unmarshalling/: configurations.py  datatypes.py  integrations.py  processors.py  typing.py  unmarshallers.py
openapi_core/validation/: __init__.py  configurations.py  datatypes.py  decorators.py  exceptions.py  handlers.py  integrations.py  models.py  processors.py  shortcuts.py  types.py  util.py  validators.py
openapi_core/wrappers/: base.py  django.py  flask.py  mock.py
reports/: junit.xml
tests/benchmarks/: bench_paths.py
tests/integration/: conftest.py  test_get_and_post.py  test_link_spec.py  test_minimal.py  test_models.py  test_path_params.py  test_petstore.py  test_read_only.py  test_requests_factory.py  test_validators.py  test_wrappers.py  test_write_only.py
tests/unit/: conftest.py  test_app.py  test_operations.py  test_paramters.py  test_paths.py  test_paths_spec.py  test_request_bodies.py  test_schemas.py  test_shortcuts.py  test_specs.py  test_util.py
(+271 files in other folders)
