[metadata]
name = openapi-core
description = client-side and server-side support for the OpenAPI Specification v3
long_description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = openapi, swagger, schema
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
packages = find:
zip_safe = False
test_suite = tests
python_requires = >= 3.6
setup_requires =
    setuptools
install_requires =
    isodate
    dictpath
    openapi-spec-validator
    openapi-schema-validator
    werkzeug
    parse
    more-itertools
    dataclasses; python_version=="3.6"
tests_require =
    pytest>=5.0.0
    pytest-flake8
    pytest-cov
    falcon
    flask
    responses
    webob
    mypy

[options.packages.find]
exclude =
    tests

[options.extras_require]
django = django>=2.2
flask = flask
requests = requests

[mypy]
files = openapi_core

# allow_redefinition = True
no_implicit_optional = True
# local_partial_types = True
strict_equality = True

check_untyped_defs = True
# disallow_subclassing_any = True
# disallow_untyped_calls = True
disallow_untyped_defs = False
ignore_missing_imports = False
show_column_numbers = True
show_none_errors = True
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-dictpath.*]
ignore_missing_imports = True

[mypy-falcon.*]
ignore_missing_imports = True

[mypy-isodate.*]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-openapi_spec_validator.*]
ignore_missing_imports = True

[mypy-openapi_schema_validator.*]
ignore_missing_imports = True

[mypy-parse.*]
ignore_missing_imports = True

[tool:pytest]
addopts = -sv --flake8 --junitxml reports/junit.xml --cov openapi_core --cov-report term-missing --cov-report xml:reports/coverage.xml
