[metadata]
name = openapi-core
description = client-side and server-side support for the OpenAPI Specification v3
long_description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = openapi, swagger, schema
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
packages = find:
zip_safe = False
test_suite = tests
python_requires = >= 3.6
setup_requires =
    setuptools
install_requires =
    isodate
    dictpath
    openapi-spec-validator
    openapi-schema-validator
    werkzeug
    parse
    more-itertools
    dataclasses; python_version=="3.6"
tests_require =
    pytest>=5.0.0
    pytest-flake8
    pytest-cov
    django>=3.0
    falcon>=3.0
    flask
    responses
    webob

[options.packages.find]
exclude =
    tests

[options.extras_require]
django = django>=3.0
falcon = falcon>=3.0
flask = flask
requests = requests

[tool:pytest]
addopts = -sv --flake8 --junitxml reports/junit.xml --cov openapi_core --cov-report term-missing --cov-report xml:reports/coverage.xml
