[metadata]
name = openapi-core
description = client-side and server-side support for the OpenAPI Specification v3
long_description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = openapi, swagger, schema
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
packages = find:
zip_safe = False
test_suite = tests
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
setup_requires =
    setuptools
install_requires =
    isodate
    dictpath
    openapi-spec-validator < 0.5.0
    openapi-schema-validator < 0.3.0
    six
    lazy-object-proxy
    attrs
    werkzeug
    parse
    more-itertools
    backports.functools-lru-cache; python_version<"3.0"
    backports.functools-partialmethod; python_version<"3.0"
tests_require =
    mock == 2.0.0
    pytest == 3.5.0
    pytest-flake8 == 1.0.7
    pytest-cov == 2.5.1
    coverage == 5.5
    djangorestframework == 3.9.4
    flake8 == 3.9.2
    falcon
    falcon == 2.0.0; python_version<"3.0"
    responses
    responses < 0.18.0; python_version<"3.0"
    webob
    strict-rfc3339 == 0.7

[options.packages.find]
exclude =
    tests

[options.extras_require]
django = 
    django < 2.0; python_version<"3.0"
    django >= 2.2; python_version>="3.0"
flask = 
    flask
    flask < 2.0.0; python_version<"3.0"
requests = 
    requests
    requests < 2.28.0; python_version<"3.0"

[tool:pytest]
addopts = -sv --flake8 --junitxml reports/junit.xml --cov openapi_core --cov-report term-missing --cov-report xml:reports/coverage.xml
